--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">MobileVN</string>
     <string name="login_email_hint">Email</string>
-    <string name="login_password_hint">Password</string>
+    <string name="login_password_hint">Mật khẩu</string>
+    <string name="login_repassword_hint">Nhập lại mật khẩu</string>
     <string name="tvDSSP">Sản phẩm mới 2022</string>
 
 </resources>
