--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,10 @@
     <string name="login_repassword_hint">Nhập lại mật khẩu</string>
     <string name="tvDSSP">Sản phẩm mới 2022</string>
     <string name="recoverypassword">Khôi phục mật khẩu</string>
-    <string name="tv_recovery">Nhập email tài khoản của bạn</string>
+    <string name="tv_email_recovery">Nhập email tài khoản của bạn</string>
+    <string name="tv_sdt_recovery">Nhập số điện thoại của bạn</string>
     <string name="tv_ttgh">Mời nhập thông tin giao hàng</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
